self-deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  labels:
    app: moodle
spec:
  selector:
    matchLabels:
      app: moodle
  replicas: 2
  template:
    metadata:
      labels:
        app: moodle
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: moodle
        image: bitnami/moodle:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          requests:
            cpu: "200m"   
            memory: "512Mi"  
          limits:
            cpu: "500m"   
            memory: "1Gi"  
        volumeMounts:
        - name: moodle-storage
          mountPath: /bitnami/moodle
      volumes:
      - name: moodle-storage
        persistentVolumeClaim:
          claimName: moodle-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: moodle
---
