self-deploy/timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moodle
spec:
  hosts:
    - "moodle.default.svc.cluster.local"
  http:
    - route:
        - destination:
            host: moodle
            subset: v1
          weight: 90
        - destination:
            host: moodle
            subset: v2
          weight: 10
      timeout: 5s
---
